# signal-backtest-harness

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
scripts/: backtest_channel.py  inspect_corpus.py  make_sample_corpus.py  pull_channel_history.py  stage0_dune_spike.py  stage10_survivor_stress.py  stage11_survivor_quality.py  stage12_bankroll_sim.py  stage13_verify.py  stage1_candidates.py  stage2_screen.py  stage3_oos.py  stage3_perwallet.py  stage4_powerlaw.py  stage4b_tailselect.py  stage4c_broadpool.py  stage5_tokenfeatures.py  stage6_channel_powerlaw.py  stage7_channel_classifier.py  stage8_channel_noleak.py  stage9_survivor.py  stage_deployer_oos.py  study_v2.py  study_v2_stageb.py  study_v3.py
src/memebot/: __init__.py  config.py  models.py
src/memebot/analysis/: excursion.py  exit_sim.py  features.py
src/memebot/backtest/: horizon_backtest.py
src/memebot/data/: cache.py  dexscreener.py  dune.py  geckoterminal.py  jupiter.py
src/memebot/ingest/: telegram_mcp.py
src/memebot/parser/: signal_parser.py
src/memebot/safety/: rugcheck.py
src/memebot/sim/: fill_simulator.py
tasks/: lessons.md  prereg_onchain.md
tests/: test_fill_simulator.py  test_horizon_backtest.py  test_signal_parser.py
