[project]
name = "memebot"
version = "0.0.1"
description = "Measurement-first Solana memecoin signal-trading machine (paper harness + risk-governed autonomous executor)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Heavy / phase-specific deps kept out of the core install until needed:
prod-ingest = ["telethon>=1.36"]     # 24/7 production Telegram user-session service
solana = ["solders>=0.21", "solana>=0.34"]  # live execution (Phase 5+)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memebot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
